<resources>
    <string name="app_name">Festo</string>
    <string name="get_started">Get Started</string>
    <string name="signuptext">"New User?<font color='#3aa8c1'>Sign Up</font>"</string>
    <string name="signin">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="mobile">Mobile number</string>
    <string name="colonen">|</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="or">or</string>
    <string name="emailid">Email Id</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_upsmall">Sign up</string>
    <string name="firstname">FirstName</string>
    <string name="peter">Peter</string>
    <string name="lastname">LastName</string>
    <string name="aji">Aji</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_verification">OTP verification</string>
    <string name="code_verification">CODE verification</string>
    <string name="enter_otp_sent_to_your_number">Enter OTP Sent to your number</string>
    <string name="enter_otp_sent_to_your_email">Enter OTP Sent to your number</string>
    <string name="enter_code_sent_to_your_eMail">Enter code Sent to your Email</string>
    <string name="please_enter_your_verification_code_sent_your_mobile">Please enter your verification code sent your mobile</string>
    <string name="please_enter_your_verification_code_sent_your_email">Please enter your verification code sent your email</string>
    <string name="otp_expries_in">OTP expries in</string>
    <string name="code_expries_in">CODE expries in</string>
    <string name="did_t_receive_otp">Did\'t receive OTP?</string>
    <string name="did_t_receive_code">Did\'t receive CODE?</string>
    <string name="_00_30"> 00:30</string>
    <string name="submit">Submit</string>
    <string name="Press_back_again_to_exit">Press back again to exit</string>
    <string name="business_registration">Business registration</string>
    <string name="dashboard">Dashboard</string>
    <string name="services">SERVICES</string>
    <string name="_4">4</string>
    <string name="new_request">New request</string>
    <string name="_0_pending_items">0 pending items</string>
    <string name="status">Status</string>
    <string name="_0_status">0 status</string>
    <string name="actions">Actions</string>
    <string name="sole_properitor">Sole Properitor</string>
    <string name="partnership">Partnership</string>
    <string name="llc">LLC</string>
    <string-array name="all_services">
        <item>@string/all_services</item>
        <item>@string/sole_properitor</item>
        <item>@string/partnership</item>
        <item>@string/llc</item>
    </string-array>
    <string-array name="branches">
        <item>@string/branches</item>
        <item>@string/sole_properitor</item>
        <item>@string/partnership</item>
        <item>@string/llc</item>
    </string-array>
    <string name="New_Request">New Request</string>
    <string name="fork_amp_spoon_catering"><![CDATA[Fork & Spoon - Catering]]></string>
    <string name="saras_birthday1">Saras Birthday</string>
    <string name="quote">Quote:</string>
    <string name="__2500">$2500</string>
    <string name="ca4215254265">CA4215254265</string>
    <string name="bid_cut_off">Bid cut_off</string>
    <string name="mar">MAR</string>
    <string name="event_date">Event date</string>
    <string name="service_date">Service Date</string>
    <string name="aug_26">Aug 26</string>
    <string name="_12_aug">12 Aug</string>
    <string name="_0_new_request">0 New request</string>
    <string name="catering_fork_spoon"><![CDATA[Catering-Fork & Spoon]]></string>
    <string name="fork_amp_spoon"><![CDATA[Fork & spoon]]></string>
    <string name="cost_estimation">Cost Estimation</string>
    <string name="saras_birthday">Saras Birthday</string>
    <string name="_2500">$2500</string>
    <string name="ca457845264162">CA457845264162</string>
    <string name="view_quote">View quote</string>
    <string name="bid_accepted">Bid accepted</string>
    <string name="quote_send_to_the_customer_quote_value_2500">Quote send to the customer - $2500</string>
    <string name="won_reject_lostbid">Won/Reject/LostBid</string>
    <string name="service_status">Service status</string>
    <string name="_9_aug_2022">9 Aug 2022</string>
    <string name="cut_off_date">Cut off date</string>
    <string name="service_date_">Service date</string>
    <string name="i_have_quotes_details">I have Quotes Details</string>
    <string name="will_provide_quotes_later">Will provide Quotes later</string>
    <string name="if_you_want">If you want to accept the bid you can proceed later within bid cut off time</string>
    <string name="comments_is_mandatory_for_thr_option">Comments is mandatory for the option "Others"</string>
    <string name="cost_is_mandatory">Cost is mandatory !</string>
    <string name="you_rejected_a_catering_1000045">You Rejected a Catering #1000045</string>
    <string name="change_in_mind">Change in Mind?</string>
    <string name="amount">Amount</string>
    <string name="bid_proposal_date">Bid proposal date</string>
    <string name="_9_aug_2021">9 Aug 2021</string>
    <string name="payment_status">Payment status</string>
    <string name="serviced_by">Serviced by</string>
    <string name="na">NA</string>
    <string name="address">Address</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="review_comment">Review Comment</string>
    <string name="comments">Comments</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="Do_you_want_to_accept_the_Bid">Do you want to accept the Bid?</string>
    <string name="service_details">Service Details</string>
    <string name="estimation_budget">Estimation Budget</string>
    <string name="service_radius">Service Radius</string>
    <string name="prefered_time_slot">Prefered Time Slot</string>
    <string name="usd_1000">USD($)1000</string>
    <string name="_4am_8am">4am - 8am</string>
    <string name="_50_100_miles">50-100 Miles</string>
    <string name="order_details">Order Details</string>
    <string name="event_dates">Event Date</string>
    <string name="venue_zip_code">Venue ZIP Code</string>
    <string name="bid_cut_off_date">Bid Cut Off Date</string>
    <string name="questions">Questions</string>
    <string name="reason_for_rejection">Reason For Rejection</string>
    <string name="icon">Icon</string>
    <string name="available">Available</string>
    <string name="aug_14">Aug 14 - </string>
    <string name="_12am_3am">12am - 3am</string>
    <string name="_3am_6am">3am - 6am</string>
    <string name="_6am_9am">6am - 9am</string>
    <string name="_9am_12pm">9am - 12pm</string>
    <string name="_12pm_3pm">12pm - 3pm</string>
    <string name="_3pm_6pm">3pm - 6pm</string>
    <string name="_6pm_9pm">6pm - 9pm</string>
    <string name="_9pm_12am">9pm - 12am</string>
    <string name="available_with_dummy_text">Available dsdssjbjfbjbfjsbfbf sasassasaasasasasasasasasasasasasasasasdsjhdskdbajbjbdjabjbadnadsddadadadadaddaddadadadadadadadadfsmfms</string>
    <string name="_1">1</string>
    <string name="sa">Sa</string>
    <string name="s">Su</string>
    <string name="f">Fr</string>
    <string name="t">Tu</string>
    <string name="w">We</string>
    <string name="m">Mo</string>
    <string name="calendar">Calendar</string>
    <string name="switch_to_modify_slots_availability">Switch to Modify Slots Availability</string>
    <string name="switch_to_View_Event_List">             Switch to View Event List</string>
    <string name="wednesday">Wednesday</string>
    <string name="active">ACTIVE REQUESTS</string>
    <string name="inactive">INACTIVE REQUESTS</string>
    <string-array name="currency_type">
        <item>USD($)</item>
        <item>GBP(\u00a3)</item>
        <item>INR(\u20B9)</item>
    </string-array>
    <string name="no_events_available">No Events Available</string>
    <string name="aug">Aug</string>
    <string name="_2022">2022</string>
    <string name="empty">Empty</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="event">Event</string>
    <string name="you_are_deselecting">You are deselecting </string>
    <string name="you_are_selecting">You are selecting </string>
    <string name="you_are_deselecting_first">slots availability for the day of </string>
    <string name="you_are_deselecting_month">slots availability for the month of </string>
    <string name="you_are_deselecting_second">This will modify all you existing slots availability. Please click OK to proceed </string>
    <string name="event_booked_on">Event Booked on the below mentioned date. Hence you can not modify the </string>
    <string name="quote_sent_on">Bid submitted on this time slot. Hence you can not modify the </string>
    <string name="not_available">Not Available</string>
    <string name="available_small">available</string>
    <string name="null_text">null</string>
    <string name="slots_availability">slots availability</string>
    <string name="entire_week">slots availability for the entire week of </string>
    <string name="title_splash">View and act on event requests, Update availability and much more.... Step inside...</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="event_overview">My Services</string>
    <string name="calendar_view">Calendar</string>
    <string name="review_feedback">Review Feedback</string>
    <string name="slot_booked">Slot Booked</string>
    <string name="Quote_Sent">Bid submitted</string>
    <string name="resend">Resend</string>
    <string name="perter_gmail_com">aaa@bbb.com</string>
    <string name="start_service_text">I hereby confirm the service \n has been successfully started</string>
    <string name="initiate_closer_text">I hereby confirm the service request \n has been successfully completed \n Proceed with Service Closer</string>
    <string name="confirm__">Confirm</string>
    <string name="choose_file">Choose file</string>
    <string name="quote_sent">Quote Sent</string>
    <string name="bidding_in_progress">Bidding in progress</string>
    <string name="won_bid">Won Bid</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="availability">Availability</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="catering">Catering</string>
    <string name="post_any_discount">(post any discount)</string>
    <string name="quote_details">Quote details</string>
    <string name="quote_details_for">Quote details for</string>
    <string name="login_message">The phone number you have mentioned does not match our account. Please try again</string>
    <string name="login_email_message">The email address you have mentioned does not match our account. Please try again</string>
    <string name="start_service">Start service</string>
    <string name="quotesite_pdf">Quotesite.pdf</string>
    <string name="Uploaded">Upload</string>
    <string name="trueText">true</string>
    <string name="bidding_">Bidding</string>
    <string name="no_comments_available">No comments available</string>
    <string name="quote_details__">Quote details</string>
    <string name="service_in_progress__">Service in Progress</string>
    <string name="service_completed__">Service completed</string>
    <string name="event_details__">EVENT DETAILS</string>
    <string name="minimum_1mb_npdf_txt_docx">Minimum 5MB \nPDF,Doc,Excel,Image</string>
    <string name="active_status"> Active Services</string>
</resources>