<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="quoteDetailsDialogViewModel"
            type="com.smf.events.ui.quotedetailsdialog.QuoteDetailsDialogViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_background"
        app:cardCornerRadius="@dimen/size_10dp"
        tools:context=".ui.quotedetailsdialog.QuoteDetailsDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_15dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginBottom="@dimen/size_20dp">

            <TextView
                android:id="@+id/quote_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/quote_details_for"
                android:textSize="@dimen/size_20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quote_title_service_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/catering"
                android:textSize="@dimen/size_20sp"
                app:layout_constraintBottom_toBottomOf="@+id/quote_title"
                app:layout_constraintStart_toEndOf="@+id/quote_title"
                app:layout_constraintTop_toTopOf="@+id/quote_title" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quote_title">

                <RadioButton
                    android:id="@+id/ihavequote"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:buttonTint="@color/button_blue"
                    android:checked="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/i_have_quotes_details"
                    android:textColor="#B5232323"
                    android:textSize="@dimen/size_18sp" />

                <RadioButton
                    android:id="@+id/quotelater"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/button_blue"
                    android:checked="false"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/will_provide_quotes_later"
                    android:textColor="#B5232323"
                    android:textSize="@dimen/size_18sp" />


            </RadioGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiogroup">

                <TextView
                    android:id="@+id/Forks_spoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/fork_amp_spoon"
                    android:textSize="@dimen/size_18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cost_estimation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/cost_estimation"
                    android:textSize="@dimen/size_14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Forks_spoon" />

                <LinearLayout
                    android:id="@+id/linearlayout_fork_spoon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cost_estimation">

                    <TextView
                        android:id="@+id/cost_estimation_discout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/post_any_discount"
                        android:textSize="@dimen/size_14sp" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearlayout_fork_spoon">

                    <Spinner
                        android:id="@+id/currency_type"
                        android:layout_width="@dimen/size_105dp"
                        android:layout_height="@dimen/size_45dp"
                        android:background="@drawable/corner_radius_spinner"
                        android:gravity="center"
                        android:padding="@dimen/size_5dp"
                        android:spinnerMode="dropdown"
                        android:textSize="@dimen/size_18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/cost_estimation_amount"
                        android:layout_width="@dimen/size_140dp"
                        android:layout_height="@dimen/size_45dp"
                        android:background="@drawable/shape_dailog_curved"
                        android:hint="@string/amount"
                        android:inputType="number"
                        android:paddingStart="@dimen/size_8dp"
                        android:textSize="@dimen/size_20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/currency_type"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.15"
                        app:layout_constraintStart_toEndOf="@+id/currency_type"
                        app:layout_constraintTop_toTopOf="@+id/currency_type" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/alert_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_is_mandatory"
                    android:textColor="#EF0A0A"
                    android:textSize="@dimen/size_16sp"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_file_upload_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alert_cost">

                    <TextView
                        android:id="@+id/quote_details_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/quote_details"
                        android:textSize="@dimen/size_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_file_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/size_1dp"
                        android:layout_marginTop="@dimen/size_2dp"
                        android:background="@drawable/custom_button_edge"
                        android:backgroundTint="@color/green"
                        android:paddingStart="@dimen/size_30dp"
                        android:paddingEnd="@dimen/size_30dp"
                        android:text="@string/choose_file"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/quote_details_upload" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tx_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/comments"
                    android:textSize="@dimen/size_18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_file_upload_layout" />

                <EditText
                    android:id="@+id/et_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size_10dp"
                    android:background="@drawable/box_login_text"
                    android:gravity="start"
                    android:lines="6"
                    android:maxLength="1000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tx_comments" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_65dp"
                android:layout_marginTop="@dimen/size_32dp"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="@dimen/size_5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/custom_button_corner_cancel"
                    android:text="@string/cancel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_5dp"
                    android:layout_marginTop="@dimen/size_18dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/custom_button_corner_ok"
                    android:text="@string/ok"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>