<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="commonInfoDialogViewModel"
            type="com.smf.events.ui.commoninformationdialog.CommonInfoDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_20dp"
        android:background="@drawable/dialog_background"
        android:padding="@dimen/size_25dp">

        <TextView
            android:id="@+id/text_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_regular"
            android:gravity="center"
            android:text="@string/Do_you_want_to_accept_the_Bid"
            android:textSize="@dimen/size_18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_65dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_information">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="@dimen/size_5dp"
                android:layout_weight="1.5"
                android:textAllCaps="false"
                android:background="@drawable/custom_button_corner_cancel"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5dp"
                android:layout_marginTop="18dp"
                android:layout_weight="1.5"
                android:textAllCaps="false"
                android:background="@drawable/custom_button_corner_ok"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/confirm__"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>